--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
 				
 				<input id="url" placeholder="https://www.youtube.com/watch?v=dQw4w9WgXcQ" \>
 
-				<p id="response"></p>
+				<p><span id="response" class="normal_text"></span></p>
 			</div>
 			<div class="footer">
 				<!-- <a>About</a> -->
